# financial-data-mcp

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/agent/: graph.py  nodes.py  prompts.py  run.py  safety.py  state.py  tool_registry.py
app/api/: __init__.py  orchestrator.py  schemas.py
app/data/: transactions_seed.json
app/tools/: __init__.py  budget_planner.py  common.py  crypto.py  currency.py  ingestion.py  insights.py  stock.py  transactions.py
examples/: agent_demo.py
tests/: helpers.py  test_budget_planner.py  test_crypto.py  test_currency.py  test_ingestion.py  test_insights.py  test_langgraph_orchestrator.py  test_mcp_tools.py  test_orchestrator_api.py  test_stock.py  test_transactions.py
ui/: .env.example  package-lock.json  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
