[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-data-mcp"
version = "0.1.0"
description = "MCP server exposing financial tools for FX, crypto, and spending analytics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "httpx",
  "langchain-anthropic",
  "langchain-core",
  "langgraph",
  "mcp",
  "pdfplumber",
  "pydantic",
  "uvicorn[standard]",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
